--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
-    "connected-react-router": "^6.9.1",
-    "history": "^4.7.2",
+    "connected-react-router": "6.8.0",
+    "history": "4.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
