--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "redux-logger": "^3.0.6",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3",
+    "swiper": "6.8.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
