--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
     "connected-react-router": "6.8.0",
+    "firebase-tools": "^9.21.0",
+    "global": "^4.4.0",
     "history": "4.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
