--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
     "connected-react-router": "6.8.0",
+    "cra-bundle-analyzer": "^0.1.0",
     "firebase-tools": "^9.21.0",
     "global": "^4.4.0",
     "history": "4.10.1",
