--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "firebase-tools": "^9.21.0",
     "global": "^4.4.0",
     "history": "4.10.1",
+    "i18next": "^21.5.2",
+    "i18next-browser-languagedetector": "^6.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.14.2",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
