--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "i18next-browser-languagedetector": "^6.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-ga": "^3.3.0",
     "react-i18next": "^11.14.2",
     "react-icons": "^4.3.1",
     "react-intersection-observer": "^8.32.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
+    "react-router-ga": "^1.2.3",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-logger": "^3.0.6",
